<resources>
    <string name="app_name">Heli Note App</string>

    <!--HomeScreen-->
    <string name="empty_list" formatted="true">There is not any note, make it now %s</string>
    <string name="create_note_app" formatted="true">Create New Note %s</string>
    <string name="recent_all_notes" formatted="true">Recent Notes %s</string>
    <string name="labels">Labels</string>

    <!--NoteScreen-->
    <string name="note_title">Note</string>


    <!--Content Description Or Tags-->
    <!--HomeScreen-->
    <string name="img_create_note">img_create_note</string>
    <string name="bottom_actions">bottom_actions</string>
    <string name="top_app_bar">top_app_bar</string>
    <string name="add_note">add_note</string>
    <string name="ic_label">ic_label</string>
    <string name="title_label">Title</string>

    <!--NoteScreen-Tag-->
    <string name="title_test_tag">title_test_tag</string>
    <string name="note_test_tag">note_test_tag</string>
    <string name="note_place_holder_test_tag">note_place_holder_test_tag</string>
    <string name="this_is_note_body_test_example">This is note body</string>
    <string name="note_title_test_example">note title</string>
    <string name="note_bottom_component">note_bottom_component</string>
    <string name="ic_tag">ic_label</string>
    <string name="labels_title">Labels</string>
    <string name="fab_aff_note_content_desc">add</string>
    <string name="fab_test_tag">fab_test_tag</string>
    <string name="create_note_test_tag">create_note_test_tag</string>
    <string name="reminder_content_desc">reminder</string>
    <string name="layout_content_desc">layout</string>
    <string name="inbox_content_desc">inbox</string>
    <string name="save_button_text_test_teg">save_button_test_teg</string>
    <string name="cancel_button_text_test_tag">cancel_button_test_tag</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="save_button_test_tag">save_button_test_tag</string>
    <string name="calendar_dialog_test_tag">calendar_dialog_test_tag</string>
    <string name="later_today_label">Later Today</string>
    <string name="later_today_test_tag">later_today_test_tag</string>
    <string name="tomorrow_morning">Tomorrow Morning</string>
    <string name="tomorrow_morning_test_tag">Tomorrow Morning Test Tag</string>
    <string name="next_week_label">Next Week</string>
    <string name="next_week_test_tag">next_week_test_tag</string>
    <string name="pick_a_date_label">Pick a Date</string>
    <string name="pick_a_date_test_tag">Pick a Date</string>
    <string name="search_icon">search_icon</string>
    <string name="close_icon">close icon</string>

</resources>